--- a/app/src/main/res/layout/succulent_item_detail_list_layout.xml
+++ b/app/src/main/res/layout/succulent_item_detail_list_layout.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/item_detail_title"
+                android:id="@+id/item_detail_list_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/colorGreen200"
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/item_detail_content"
+                android:id="@+id/item_detail_list_content"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@color/colorGreen200"
@@ -43,7 +43,7 @@
                 android:text="多肉资料内容"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/item_detail_title" />
+                app:layout_constraintTop_toBottomOf="@id/item_detail_list_title" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.fanqi.succulent.activity.view.SucculentDailyCardView>
