--- a/app/src/main/res/layout/main_ac.xml
+++ b/app/src/main/res/layout/main_ac.xml
@@ -75,8 +75,7 @@
                                 android:id="@+id/main_fragment"
                                 android:name="androidx.navigation.fragment.NavHostFragment"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                app:navGraph="@navigation/navigation_daily" />
+                                android:layout_height="match_parent" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.core.widget.NestedScrollView>
                 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
