--- a/app/src/main/res/layout/succulent_list_item_layout.xml
+++ b/app/src/main/res/layout/succulent_list_item_layout.xml
@@ -10,9 +10,11 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="5dp">
 
         <!--    图片 名字 -->
         <!--    屏幕宽度决定recycler列数-->
@@ -20,13 +22,10 @@
         <!--    宽度决定高度-->
 
         <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            app:cardCornerRadius="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_margin="10dp"
+            app:cardCornerRadius="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,8 +48,11 @@
                     android:padding="5dp"
                     android:text="多肉名字" />
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <LinearLayout-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="15dp" />-->
+    </LinearLayout>
 
 </layout>
