--- a/app/src/main/res/layout/main_ac.xml
+++ b/app/src/main/res/layout/main_ac.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinator_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -27,17 +28,17 @@
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="200dp"
                     android:background="@color/colorGreen900"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:contentScrim="@color/colorGreen800"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-
                     <ImageView
                         android:id="@+id/toolbar_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:alpha="0.1"
                         android:scaleType="centerCrop"
                         android:src="@mipmap/ic_launcher" />
 
