--- a/app/src/main/res/layout/succulent_list_fragment.xml
+++ b/app/src/main/res/layout/succulent_list_fragment.xml
@@ -19,5 +19,9 @@
             android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="20dp" />
     </LinearLayout>
 </layout>
