--- a/app/src/main/res/layout/main_ac.xml
+++ b/app/src/main/res/layout/main_ac.xml
@@ -15,30 +15,34 @@
         android:layout_height="match_parent">
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:fitsSystemWindows="true"
             android:id="@+id/coordinator_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.AppBarLayout
+                android:fitsSystemWindows="true"
                 android:id="@+id/appbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
 
                 <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:fitsSystemWindows="true"
                     android:id="@+id/collapsing_toolbar_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:background="@color/colorGreen900"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     app:contentScrim="@color/colorGreen800"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                     <ImageView
+                        android:fitsSystemWindows="true"
                         android:id="@+id/toolbar_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:alpha="0.1"
+                        android:alpha="0.85"
                         android:scaleType="centerCrop"
                         android:src="@mipmap/ic_launcher" />
 
@@ -61,24 +65,18 @@
                     android:id="@+id/swipe_refresh_layout"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    app:layout_constraintBottom_toTopOf="@+id/drawer_bottom_navigation_view">
+                    android:layout_weight="1">
 
                     <androidx.core.widget.NestedScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_height="match_parent">
+                        <fragment
+                            android:id="@+id/main_fragment"
+                            android:name="androidx.navigation.fragment.NavHostFragment"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <fragment
-                                android:id="@+id/main_fragment"
-                                android:name="androidx.navigation.fragment.NavHostFragment"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent" />
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                            android:layout_height="match_parent" />
                     </androidx.core.widget.NestedScrollView>
+
                 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
                 <com.google.android.material.bottomnavigation.BottomNavigationView
