--- a/app/src/main/res/layout/succulent_list_fragment.xml
+++ b/app/src/main/res/layout/succulent_list_fragment.xml
@@ -9,19 +9,20 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/list_fragment_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="800dp"
         android:orientation="vertical">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/succulent_list_recycler_view"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="20dp" />
+            android:layout_gravity="top"
+            android:layout_height="wrap_content" />
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </androidx.viewpager.widget.ViewPager>
     </LinearLayout>
 </layout>
