--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -12,5 +12,9 @@
         android:icon="@drawable/ic_action_help"
         android:title="帮助"
         app:showAsAction="always"></item>
-
+    <item
+        android:id="@+id/toolbar_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:title="刷新"
+        app:showAsAction="always"></item>
 </menu>
