--- a/app/src/main/res/layout/succulent_list_fragment.xml
+++ b/app/src/main/res/layout/succulent_list_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -16,6 +17,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
+            app:tabMode="scrollable"
             android:layout_gravity="top"
             android:layout_height="wrap_content" />
         <androidx.viewpager.widget.ViewPager
