--- a/app/src/main/res/navigation/navigation_daily.xml
+++ b/app/src/main/res/navigation/navigation_daily.xml
@@ -10,4 +10,40 @@
         android:name="com.fanqi.succulent.activity.fragment.SucculentDailyFragment"
         android:label="succulent_daily_fragment"
         tools:layout="@layout/succulent_daily_fragment" />
+
+    <fragment
+        android:id="@+id/succulentFavoriteFragment"
+        android:name="com.fanqi.succulent.activity.fragment.SucculentFavoriteFragment"
+        tools:layout="@layout/succulent_favorite_fragment"
+        android:label="succulent_favorite_fragment" />
+
+    <fragment
+        android:id="@+id/succulentListFragment"
+        android:name="com.fanqi.succulent.activity.fragment.SucculentListFragment"
+        android:label="SucculentListFragment"
+        tools:layout="@layout/succulent_list_fragment">
+        <action
+            android:id="@+id/action_succulentListFragment_to_succulentFragment"
+            app:destination="@id/succulentFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/succulentFragment"
+        android:name="com.fanqi.succulent.activity.fragment.SucculentFragment"
+        android:label="SucculentFragment">
+        <action
+            android:id="@+id/action_succulentFragment_to_succulentListFragment"
+            app:destination="@id/succulentListFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/succulentListFragment"
+            app:popUpToInclusive="false" />
+
+    </fragment>
+
 </navigation>
